# dataset-analysis-tool

./: README.md  pyproject.toml
src/my_python_package/: Income.csv  __init__.py  __main__.py  core.py
